# openvpn-mysql-auth

./: .gitignore  .hgignore  CHANGES  Changelog  Makefile  README  THANKS.txt  TODO  auth-mysql.c  auth-mysql.conf  configure.in  mysql-auth.conf  sqlstuff.h
example/: mysql-auth.conf  openvpn_schema.sql
example/simple/: mysql-auth-simple.conf  openvpn_schema_simple.sql
src/: Makefile.am  am_mysql.c  am_mysql.h  auth-mysql.c  client_context.c  client_context.h  debug.c  debug.h  kvp.c  kvp.h  list.c  list.h  mysql-auth.c  pf.c  pf.h  plugin_conf.c  plugin_conf.h  rconf.c  rconf.h  sqlstuff.c  sqlstuff.h  utils.c  utils.h
tests/: Makefile.am  testplugin.c
