m4_define([openvpnmysqlauth_version_major],[0])
m4_define([openvpnmysqlauth_version_minor],[0])
m4_define([openvpnmysqlauth_version_micro],[2])
m4_define([openvpnmysqlauth_version_extra],[])
m4_define([openvpnmysqlauth_version],[openvpnmysqlauth_version_major().openvpnmysqlauth_version_minor().openvpnmysqlauth_version_micro()openvpnmysqlauth_version_extra()])

AC_INIT([OpenVPN MySQL Auth],[openvpnmysqlauth_version()],[chantra@debuntu.org],[openvpn-mysql-auth])
AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

AC_CONFIG_SRCDIR([Makefile.am])
AM_CONFIG_HEADER([config.h])

AM_INIT_AUTOMAKE([$PACKAGE], [$VERSION])

AC_PROG_LIBTOOL
dnl AC_PROG_RANLIB
dnl LT_INIT
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC

CFLAGS="${CFLAGS} -g -Wall -Werror"

AC_SUBST(CFLAGS)

AC_CHECK_HEADER([mysql/mysql.h],
        [AC_CHECK_LIB(mysqlclient, [mysql_init])],
        [AC_MSG_ERROR("mysql client headers not found")])

MYSQL_CFLAGS=$(mysql_config --cflags)
MYSQL_LIBS=$(mysql_config --libs
AC_SUBST([MYSQL_CFLAGS])
AC_SUBST([MYSQL_LIBS])
)
AC_PROG_INSTALL
AC_OUTPUT( Makefile src/Makefile tests/Makefile)

